WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300121
REGRESSION(
300786@main
): Build error in UnifiedPDFPlugin.cpp: Undefined symbol "WebCore::Node::document() const"
https://bugs.webkit.org/show_bug.cgi?id=300121
Summary
REGRESSION(300786@main): Build error in UnifiedPDFPlugin.cpp: Undefined symbo...
Jer Noble
Reported
2025-10-03 10:34:43 PDT
REGRESSION(
300786@main
): Build error in UnifiedPDFPlugin.cpp: Undefined symbol "WebCore::Node::document() const"
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-10-03 10:34:44 PDT
<
rdar://problem/161863117
>
Jer Noble
Comment 2
2025-10-03 10:35:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51764
EWS
Comment 3
2025-10-03 11:20:45 PDT
Committed
300957@main
(9d81edfca887): <
https://commits.webkit.org/300957@main
> Reviewed commits have been landed. Closing PR #51764 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug